test/expected/explain_puw3.out
explain unsigned *x : 3
                    ^
21: error: invalid bit-field type "unsigned*"; must be an integral type
